[gd_scene load_steps=9 format=3 uid="uid://qbcqm5fskyho"]

[ext_resource type="Script" uid="uid://cliebscquwioh" path="res://src/ui/components/url_popup/url_popup.gd" id="1_fqfiv"]
[ext_resource type="Texture2D" uid="uid://jlijusqci4aw" path="res://assets/ui/warning.svg" id="2_2hcht"]
[ext_resource type="LabelSettings" uid="uid://chcc4etqvrmaw" path="res://src/ui/components/profile/profile_tittle_label_settings.tres" id="2_qbeay"]
[ext_resource type="LabelSettings" uid="uid://6uimow55ok0b" path="res://src/ui/components/profile/profile_description_label_settings.tres" id="3_2hcht"]
[ext_resource type="FontFile" uid="uid://drw8yv4w843s4" path="res://assets/themes/fonts/inter/Inter-SemiBold.ttf" id="4_8u0wd"]
[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="5_oxsjn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbeay"]
bg_color = Color(0.298039, 0.0784314, 0.486275, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="LabelSettings" id="LabelSettings_7wlfd"]
font = ExtResource("4_8u0wd")
font_color = Color(0.196078, 0.807843, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="UrlPopup" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)
script = ExtResource("1_fqfiv")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 2
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -140.0
offset_right = 187.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbeay")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_2hcht")
expand_mode = 5
stretch_mode = 4

[node name="Label_Title" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Are you sure you want to follow this link?"
label_settings = ExtResource("2_qbeay")
horizontal_alignment = 1

[node name="Label_Message" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Continuing will open the link in your browser. Make sure it's a website you trust before proceeding."
label_settings = ExtResource("3_2hcht")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label_Url" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "www.test.com"
label_settings = SubResource("LabelSettings_7wlfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Button_GoToLinkCancel" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 38)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DarkButton"
text = "CANCEL"

[node name="Button_GoToLinkContinue" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 38)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_oxsjn")
text = "CONTINUE"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button_GoToLinkCancel" to="." method="_on_button_go_to_link_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button_GoToLinkContinue" to="." method="_on_button_go_to_link_continue_pressed"]
